<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_md">

    <!-- Header -->
    <TextView
        android:id="@+id/labelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_choose_station"
        android:textAppearance="@style/TextAppearance.Tidely.Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/station_count"
        android:textAppearance="@style/TextAppearance.Tidely.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelHeader" />

    <!-- Search Bar -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/search_stations"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/radius_sm"
        app:boxCornerRadiusBottomStart="@dimen/radius_sm"
        app:boxCornerRadiusTopEnd="@dimen/radius_sm"
        app:boxCornerRadiusTopStart="@dimen/radius_sm"
        app:startIconDrawable="@drawable/ic_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionSearch" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Station List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_md"
        android:clipToPadding="false"
        tools:listitem="@layout/item_station"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLayout"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Loading -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
